<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="last"
            type="boolean" />

        <variable
            name="actionHandler"
            type="woowacourse.shopping.presentation.ui.productlist.ProductListActionHandler" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/tv_show_more_products"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@color/green"
            android:gravity="center"
            android:onClick="@{() -> actionHandler.loadMoreProducts()}"
            android:text="@string/show_more_products_title"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            android:visibility="@{last ? View.GONE : View.VISIBLE}"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_empty_show_more"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/empty_show_more_title"
            android:visibility="@{last ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
