...
                    tools:text="1" />

            </FrameLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_product_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adapter="@{adapter}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
...
