...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:product="@{product}"
            app:quantity="@{product.quantity}" />

        <TextView
            android:id="@+id/text_view_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:singleLine="true"
...
